--- a/src/components/users/Users.html
+++ b/src/components/users/Users.html
@@ -62,6 +62,7 @@
           size="mini"
           type="primary"
           icon="el-icon-edit"
+          @click="showEditUserDialog(scope.row)"
         ></el-button>
         <el-button
           plain
@@ -114,6 +115,25 @@
     <div slot="footer" class="dialog-footer">
       <el-button @click="dialogAddUserVisible = false">取 消</el-button>
       <el-button @click="addUser" type="primary">确 定</el-button>
+    </div>
+  </el-dialog>
+  <!-- 第二个对话框 : 编辑用户对话框 -->
+  <el-dialog title="编辑用户" :visible.sync="dialogEditUserVisible">
+    <el-form :model="editUserForm" label-width="80px">
+      <el-form-item label="用户名">
+        <el-tag>{{ editUserForm.username }}</el-tag>
+        <!-- <el-input v-model="editUserForm.username" autocomplete="off"></el-input> -->
+      </el-form-item>
+      <el-form-item label="邮箱">
+        <el-input v-model="editUserForm.email" autocomplete="off"></el-input>
+      </el-form-item>
+      <el-form-item label="手机">
+        <el-input v-model="editUserForm.mobile" autocomplete="off"></el-input>
+      </el-form-item>
+    </el-form>
+    <div slot="footer" class="dialog-footer">
+      <el-button @click="dialogEditUserVisible = false">取 消</el-button>
+      <el-button type="primary" @click="editUser">确 定</el-button>
     </div>
   </el-dialog>
 </div>
